<resources>
    <string name="app_name">NewsLify</string>
    <string name="june_12_2020_bbc">june 12</string>
    <string name="article_image">article image</string>
    <string name="opps_couldn_t_load_feed_have_you_tried_switching_on_your_data">Opps, couldn\'t load feed, \n an error occurred</string>
    <string name="no_news_article_saved">No news article saved</string>
    <string name="news_articles_you_ve_saved_will_appear_here">News articles you\'ve saved will appear here</string>
    <string name="searchArticle">Anything good starts with a good search</string>
    <string name="search_for_articles">Search for Articles</string>
    <string name="term_of_service">by using this app, you have agreed to \n our Term of service and Privacy policy</string>
    <string name="search_hint">Search news articles</string>
    <string name="ftm">From Top News Channels</string>
    <string name="save_article">\t\t\t\t\t\tSave Article</string>
    <string name="copy_link">\t\t\t\t\t\tCopy Link</string>
    <string name="share_article">\t\t\t\t\t\tShare</string>
    <string name="upgrade_to_newslify_premium">Upgrade to NewsLify Premium</string>
    <string name="offers">Start your 7-Days free trial to remove all Ads and lot\'s more</string>
    <string name="offers_for_dialog">Start your 7-Days free trial and get:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="support_us">Support Us</string>
    <string name="my_banner_id">ca-app-pub-7292512767354152/6298610695</string>
    <string name="my_rewardedvideo_ad">ca-app-pub-7292512767354152/7146717531</string>
    <string name="premium_coins_balance">Premium Coins Balance:</string>
    <string name="push_notification">Push Notification: coming soon</string>
    <string name="purchase_themes">Purchase Themes: click to view available themes</string>
    <string name="change_country">Change Country</string>
    <string name="delete_all_alert">please bear in mind that this method can\'t be reverted when done, do you wish to continue?</string>
    <string name="goal_alert">set the number of news articles you need to read every day, you can reset any time, please bear in mind that the default news goal for every user is 5</string>
    <string name="image_transition">imageTransition</string>

</resources>