<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bottomsheet_bg"
    app:layout_behavior="com.google.android.material.BottomSheet">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/rubik_bold"
        android:padding="17dp"
        android:text="ARTICLE OPTIONS"
        android:textColor="?attr/exploreChooseMoreIconColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/saveExArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/save_explore_icon"
        android:fontFamily="@font/rubik_bold"
        android:padding="20dp"
        android:text="@string/save_article"
        android:textColor="?attr/exploreChooseMoreIconColor"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/copyExArticleLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/copy_link"
        android:fontFamily="@font/rubik_bold"
        android:padding="20dp"
        android:text="@string/copy_link"
        android:textColor="?attr/exploreChooseMoreIconColor"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveExArticle" />

    <TextView
        android:id="@+id/shareExArticleLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/share_ex_article"
        android:fontFamily="@font/rubik_bold"
        android:padding="20dp"
        android:text="@string/share_article"
        android:textColor="?attr/exploreChooseMoreIconColor"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyExArticleLink" />


</androidx.constraintlayout.widget.ConstraintLayout>